# ChatApp

./: CMakeCache.txt  CMakeLists.txt  ChatApp  Makefile  README.md  cmake_install.cmake  server
include/: JsonFabrica.h  createSocket.h  fabricaDeJsons.h  protocolo.hpp
src/: client  client.c  client.cpp  createSocket.cpp  fabricaDeJsons.cpp  main.cpp  server  server.cpp  sockutil.cpp
